<resources>
    <string name="app_name">Snake</string>
    <string name="continue_game">Continue</string>
    <string name="new_game">New game</string>
    <string name="type">Type</string>
    <string name="speed">Speed</string>
    <string name="records">Records</string>
    <string name="options">Options</string>
    <string name="about_program">About program</string>
    <string name="without_labyrinth">Without labyrinth</string>
    <string name="box_labyrinth">Box</string>
    <string name="tunnel_labyrinth">Tunnel</string>
    <string name="mill_labyrinth">Mill</string>
    <string name="room_labyrinth">Room</string>
    <string name="change_labyrinths">Change labyrinths</string>
    <string name="language">Language</string>
    <string name="control">Control</string>
    <string name="theme">Theme</string>
    <string name="music">Music</string>
    <string name="sounds">Sounds</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="gamepad">Gamepad</string>
    <string name="swipe">Swipes</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="score">Score</string>
    <string name="about_program_text">SNAKE\nVersion 1.0\n\nDeveloper: Roman Shchelokov,\nstudent of Samara University,\nfaculty of informatics,\nFIIT, group 6214.\n</string>
    <string name="empty_db">No records</string>
    <string name="all_records">All records</string>
    <string name="game_over">Game over</string>
    <string name="clear_table_of_records">Clear</string>
    <string name="table_is_cleared">Table is cleared</string>
    <string name="your_score_is">Your score is</string>
    <string name="attention">Attention!</string>
    <string name="are_you_sure_1">Are you sure you want to delete the high score table?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="lab_changed">Labyrinth changed</string>
    <string name="speed_changed">Speed changed</string>
    <string name="table_is_empty">Score table is empty</string>
    <string name="ok">OK</string>
</resources>