<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:context=".OptionsActivity">

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/TextViewInOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/control">

            </TextView>

            <ToggleButton
                android:id="@+id/is_swipe"
                style="@style/ToggleButtonInOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textOff="@string/gamepad"
                android:textOn="@string/swipe">

            </ToggleButton>
        </TableRow>

    </TableLayout>


</LinearLayout>